feat: 实现JWT令牌刷新机制并优化树形结构处理
refactor: 移除冗余参数校验并统一错误码处理

feat(auth): 添加JWT过期异常处理并优化权限判断逻辑

refactor(menu): 简化菜单服务接口并移除冗余方法

feat(tree): 新增通用树形结构工具类并应用于部门和菜单

docs: 添加代码生成和注释规范文档

style: 清理XML文件格式并修复无换行问题

test: 更新操作日志记录测试状态

fix(login): 修复登录逻辑并添加refreshToken支持

refactor(flow): 优化流程模板服务并移除冗余校验

chore: 更新依赖和配置文件